--- a/Registration/pom.xml
+++ b/Registration/pom.xml
@@ -89,6 +89,11 @@
             <artifactId>poi-ooxml</artifactId>
             <version>3.8</version>
         </dependency>
+        <dependency>
+            <groupId>ognl</groupId>
+            <artifactId>ognl</artifactId>
+            <version>3.0.5</version>
+        </dependency>
     </dependencies>
 	<build>
 		<pluginManagement>
