--- a/Registration/pom.xml
+++ b/Registration/pom.xml
@@ -94,10 +94,33 @@
             <artifactId>ognl</artifactId>
             <version>3.0.5</version>
         </dependency>
+        <dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.0.0.GA</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+  			<groupId>org.hibernate</groupId>
+  			<artifactId>hibernate-validator-annotation-processor</artifactId>
+  			<version>4.1.0.Final</version>
+		</dependency>
+            
     </dependencies>
 	<build>
 		<pluginManagement>
 			<plugins>
+				<!-- Facilitates downloading source and javadoc in Eclipse -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-eclipse-plugin</artifactId>
+					<version>2.8</version>
+					<configuration>
+						<wtpversion>2.0</wtpversion>
+						<downloadSources>true</downloadSources>
+						<downloadJavadocs>true</downloadJavadocs>
+					</configuration>
+				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
