c3po, alpha numeric seating, on hold status,

--- a/Registration/src/main/webapp/WEB-INF/jdbc.properties
+++ b/Registration/src/main/webapp/WEB-INF/jdbc.properties
@@ -1,5 +1,11 @@
-jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.driverClass=com.mysql.jdbc.Driver
 jdbc.dialect=org.hibernate.dialect.MySQLDialect
-jdbc.databaseurl=jdbc:mysql://localhost:3306/YVPHFKRegistrationDB
-jdbc.username=yvphfkadmin
+jdbc.jdbcUrl=jdbc:mysql://localhost:3306/YVPHFKRegistrationDB
+jdbc.user=yvphfkadmin
 jdbc.password=yvphfkadmin
+jdbc.maxIdleTime=300
+jdbc.maxPoolSize=30
+jdbc.minPoolSize=10
+jdbc.acquireIncrement=5
+jdbc.maxStatements=600
+jdbc.maxStatementsPerConnection=50
